--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
 
+
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -26,7 +27,6 @@
     </div>
   </div>
 </div>
-
 
 
 <!-- Page content -->
@@ -109,15 +109,16 @@
       </div>
     </div>
   </div>
-
-<!-- End page content -->
 </div>
 
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Template borrowed from <a class="weblink" href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <!-- <p>Template borrowed from <a class="weblink" href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p> -->
 </footer>
 
+
 </body>
+
+
 </html>
