--- a/visualizations.html
+++ b/visualizations.html
@@ -18,6 +18,7 @@
 
 <body>
 
+
 <!--Top navigation bar-->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
@@ -31,18 +32,17 @@
 </div>
 
 
-
 <!--Main body-->
-<div>
+<div class="w3-content w3-padding" style="max-width:1564px">
   <div class="w3-container w3-padding-32" id="27 Lines">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">27 Lines on the Clebsh Surface</h3>
-      <div class="w3-content w3-display-container" style="max-width:300px">
-        <img class="slideshow1" src="./images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
-        <img class="slideshow1" src="./images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
-        <img class="slideshow1" src="./images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
-        <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
-        <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
-      </div>
+    <div class="w3-content w3-display-container" style="max-width:300px">
+      <img class="slideshow1" src="./images/visualizations/clebsh1.jpg" alt="clebsh 1" style="max-width:300px">
+      <img class="slideshow1" src="./images/visualizations/clebsh2.jpg" alt="clebsh 2" style="max-width:300px">
+      <img class="slideshow1" src="./images/visualizations/clebsh3.jpg" alt="clebsh 3" style="max-width:300px">
+      <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-bottomright" onclick="plusSlides(1, 0)">&#10095;</button>
+    </div>
     <p>In algebraic geometry, there is a remarkable <a class="weblink" href="https://en.wikipedia.org/wiki/Cubic_surface#27_lines_on_a_cubic_surface">theorem</a>
       that states that any smooth, cubic surface has 27 lines that lie on it. In collaboration with postdoc
       <a class="weblink" href="https://nathanfieldsteel.github.io/">Nathan Fieldsteel</a>, we managed to 3D print the
@@ -73,17 +73,17 @@
   </div>
 </div>
 
-</div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <p>Code can be found <a class="weblink" href="https://github.com/UKYMathLab/3dprinting">here</a>.</p>
+  <p>Code can be found <a class="weblink" href="https://github.com/UKYMathLab/3dprinting">here</a>.</p>
 </footer>
 
 
 <script src="./scripts/slideshows.js"></script>
 
+
 </body>
+
 
 </html>
