--- a/assignments.html
+++ b/assignments.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
-{% extends "base.html" %}
-{% block title %}{{ title }}{% endblock %}
+<title>TA Assignments</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block body %}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+
+<head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <!--Taken from "https://www.w3schools.com/w3css/tryit.asp?filename=tryw3css_templates_architect&stacked=h"-->
+  
+  <link rel="stylesheet" type="text/css" href="./styles/weblinks.css">
+  <link rel="stylesheet" type="text/css" href="./styles/slideshows.css">
+  <link rel="stylesheet" type="text/css" href="./styles/fixed_lists.css">
+</head>
+
 <body>
+
+<!--Top navigation bar-->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="./index.html" class="w3-bar-item w3-button"><b>Go back</b></a>
+
+    <div class="w3-right w3-hide-small">
+      <a href="#Background" class="w3-bar-item w3-button">Background</a>
+      <a href="#Algorithm" class="w3-bar-item w3-button">Algorithm</a>
+    </div>
+  </div>
+</div>
 
 <div class="w3-content w3-padding" style="max-width:1564px">
   <div class="w3-container w3-padding-32" id="Background">
@@ -35,7 +60,7 @@
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">Algorithm</h3>
     <div class="w3-container">
       <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:right">
-        <img src="../static/images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
+        <img src="./images/assignments/assignments.PNG" alt="graph" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:right">
         <br><div style="text-align:center"><i>Graph formulation of the Math Lab assignment problem.</i></div>
       </div>
 
@@ -70,7 +95,7 @@
 
       <div class="w3-container">
         <div class="w3-container w3-border w3-border-light-grey w3-padding-16" style="float:left">
-          <img src="../static/images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
+          <img src="./images/assignments/code.PNG" alt="code" style="padding: 0px 16px 0px 16px; max-width: 512px; max-height:512px; float:left">
           <br><div style="text-align:center"><i>The algorithm implemented in Python.</i></div>
         </div>
 
@@ -93,15 +118,15 @@
 
       <div class="w3-content w3-display-container", style="max-width:512px; max-height:512px">
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="../static/images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
+          <img src="./images/assignments/step1.PNG" alt="step1" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Determine compatible student times and group times.</i></div>
         </div>
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="../static/images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
+          <img src="./images/assignments/step2.PNG" alt="step2" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Select a time for each group.</i></div>
         </div>
         <div class="w3-content w3-display-container slideshow1" style="max-width:512px; max-height:512px">
-          <img src="../static/images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
+          <img src="./images/assignments/step3.PNG" alt="step3" style="max-width:512px; max-height:512px">
           <br><div style="text-align:center"><i>Select a subset of students for each group time.</i></div>
         </div>
         <button class="w3-button w3-black w3-display-bottomleft" onclick="plusSlides(-1, 0)">&#10094;</button>
@@ -119,9 +144,8 @@
   Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Assignments">here</a>.</p>
 </footer>
 
+<script src="./scripts/slideshows.js"></script>
 
 </body>
-{% endblock body %}
-
 
 </html>
