Updated links, bio, and CV

--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
   <div class="w3-container w3-padding-32" id="About">
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
     <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
-    <p>I am a recent graduate of the University of Kentucky where I earned a Bachelor of Science in Mathematics with minors in History and Classics.
-       My primary research interests seem to lie in complex analysis, geometry, and machine learning. 
-       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
-       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
-       I am now a graduate student in Auburn University's Mathematics and Statistics Department.
-       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
-       Photo is courtesy of Nathan Jacobs.
+    <p>
+      I am graduate student in Mathematics at Auburn University.
+      I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
+      While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
+      and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
+      
+      My primary research interests seem to lie in algebra, machine learning, and topological data analysis.
+      A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
+      Photo is courtesy of Nathan Jacobs.
     </p>
   </div>
 
