--- a/minecraft.html
+++ b/minecraft.html
@@ -95,6 +95,10 @@
         \( 1 \)-dimensional holes are structures like caves, and so on. Using persistent homology should allow the
         generator to train more representative landscapes and structures.
     </p>
+    <p>
+      Although in theory this seems entirely possible, right now the main obstacle holding this project back is memory limits due to the density of Minecraft chunks.
+      I have been trying to think of ways around this.
+    </p>
   </div>
 </div>
 
