--- a/resampling.html
+++ b/resampling.html
@@ -95,7 +95,7 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
   <p>Joint work with <a class="weblink" href="http://cs.uky.edu/~jacobs/">Nathan Jacobs</a>
-  and Hunter Blanton.</p>
+  and <a class="weblink" href="https://hblanton.github.io/">Hunter Blanton</a>.</p>
 </footer>
 
 <script src="./scripts/slideshows.js"></script>
