--- a/heisenberg.html
+++ b/heisenberg.html
@@ -204,7 +204,8 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-  <p>Investigated with Angela Vichitbanda and Joe Cecil under the mentorship
+  <p>Investigated with <a class="weblink" href="https://aavichitbandha.github.io/">Angela Vichitbanda</a> 
+  and Joe Cecil under the mentorship
   of <a class="weblink" href="http://www.ms.uky.edu/~cama268/">Chris Manon</a>.
   Code can be found <a class="weblink" href="https://github.com/UKYMathLab/Heisenberg">here</a>.</p>
 </footer>
