Small update to home page

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <h3 class="w3-border-bottom w3-border-grey w3-padding-16">About</h3>
     <img class="w3-image" src="./images/me.jpg" alt="me" width="200" height="240" style="padding: 0px 16px 0px 16px; float:left">
     <p>
-      I am graduate student in Mathematics at Auburn University.
+      I am graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/">Hal Schenck</a>.
       I earned a B.S. in Mathematics with minors in History and Classics at the University of Kentucky.
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
       
-      My primary research interests seem to lie in algebra, machine learning, and topological data analysis.
+      My primary research interests lie in algebra, machine learning, and topological data analysis.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
       Photo is courtesy of Nathan Jacobs.
     </p>
