Small change in research interests

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       While at the University of Kentucky, I conducted research with the <a class="weblink" href="http://www.ms.uky.edu/~geometrylab/">University of Kentucky Math Lab</a>
       and also as part of the <a class="weblink" href="http://mvrl.cs.uky.edu/">Multimodal Vision Research Laboratory</a>.
       
-      My primary research interests lie in algebra, machine learning, and topological data analysis.
+      My primary research interests lie in tropical geometry, machine learning, and topological data analysis.
       A copy of my CV can be found <a class="weblink" href="./misc/CV.pdf">here</a> along with my contact information. 
       Photo is courtesy of Nathan Jacobs.
     </p>
